fixed the toggling feature for the theme switcher, the icon is now wrapped in a button tag so now it's keyboard friendly, also fixed an issue where the program would crash if the user did not click directly on the button

--- a/src/scss/modules/_theme-controller.scss
+++ b/src/scss/modules/_theme-controller.scss
@@ -57,9 +57,6 @@ body {
         height: 20px;
         margin: 0 auto;
 
-        &.on:before {
-            transform: translate(100%);
-        }
 
         &:before {
             position: absolute;
